force-app/main/default/objects/zkmulti__MCUser_Printer__c/zkmulti__MCUser_Printer__c.object-meta.xml
<CustomObject>
    <label>User Printer</label>
    <nameField>
        <displayFormat>UP-{0000}</displayFormat>
        <label>User Printer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Printers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>