force-app/main/default/objects/zkmulti__MCUser_Printer__c/fields/zkmulti__DocPrinterTray__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DocPrinterTray__c</fullName>
    <label>Doc Printer Tray</label>
    <length>255</length>
    <type>Text</type>
</CustomField>