force-app/main/default/objects/zkmulti__MCUser_Printer__c/fields/zkmulti__Number_Of_Copies__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Number_Of_Copies__c</fullName>
    <label>Number Of Copies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>