force-app/main/default/objects/zkmulti__MCUser_Printer__c/fields/zkmulti__Printer__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Printer__c</fullName>
    <label>Printer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>