force-app/main/default/objects/zkmulti__MCUser_Printer__c/fields/zkmulti__Setting_Category__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Setting_Category__c</fullName>
    <label>Setting Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>